--- a/sticker chrome extension/manifest.json
+++ b/sticker chrome extension/manifest.json
@@ -3,6 +3,13 @@
     "version": "1",
     "description": "Sends image data to telegram bot",
     "manifest_version": 3,
+    "icons": {
+        "16": "logo16.png",
+        "32": "logo32.png",
+        "48": "logo48.png",
+        "64": "logo64.png",
+        "128": "logo128.png"
+    },
     "permissions": [
         "contextMenus",
         "storage"
